# sparsedrive-tensorrt-deploy-implement

./: .gitignore  README.md  README_CN.md  TECH_DETAILS.md  TECH_DETAILS_CN.md  requirement.txt
model_anchor_config/kmeans/: kmeans_det_900.npy  kmeans_map_100.npy  kmeans_motion_6.npy  kmeans_plan_6.npy
projects/configs/: sparsedrive_small_stage1.py  sparsedrive_small_stage2.py
projects/mmdet3d_plugin/datasets/evaluation/map/: vector_eval.py
projects/mmdet3d_plugin/models/: attention.py  blocks.py
projects/mmdet3d_plugin/models/detection3d/: detection3d_blocks.py  detection3d_head.py
projects/mmdet3d_plugin/models/map/: map_blocks.py
projects/mmdet3d_plugin/models/motion/: motion_planning_head.py
projects/mmdet3d_plugin/ops/: __init__.py  deformable_aggregation.py
projects/trt_plugin/: CMakeLists.txt  DeformableAggregationPlugin.cpp  DeformableAggregationPlugin.h  deformable_aggregation_kernel.cu
scripts/: test.sh
tools/: analysis.py  analysis_inference.py  clean_onnx.py  debug_onnx.py  export_onnx.py  export_onnx_det_map.py  export_onnx_motion.py  fps.py  inspect_fusion.py  onnx2trt.py  onnx2trt.sh  prune_onnx.py  test.py  test_forward_onnx.py  test_pytorch_zero_history.py  test_trt.py  test_trt_motion.py
tools/debug_trt/: analysis_realdata.py  compare_forward_onnx.py  compare_trt_pth.py  debug_det_align.py  debug_export_shape.py  debug_map_align.py  debug_motion_align.py  debug_motion_align_trt.py  test_onnx.py  test_onnx_detmap.py  test_onnx_motion.py  test_trt_percesion.py
